--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,9 @@
 # main links links
 main:
-- title: "Education"
+
+<!-- - title: "Education"
     url: /education/
+    -->
     
   - title: "Publications"
     url: /publications/
