--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,13 @@
 # main links links
 main:
 
-  - title: "Publications"
+- title: "Education"
+    url: /education/
+    
+- title: "Publications"
     url: /publications/
 
  
-  - title: "Contact"
+- title: "Contact"
     url: /contact/ 
 
