--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
 
 - title: "Education"
-    url: https://520yrn.github.io/education/
+    url: 520yrn.github.io/education/
     
 - title: "Publications"
     url: /publications/
