--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
 
-- title: "Education"
+- title: "Educations"
     url: "520yrn.github.io/education"
     
 - title: "Publications"
