--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,9 @@
 # main links links
 main:
 
+  - title: "Education"
+    url: /Education/ 
+  
   - title: "Publications"
     url: /publications/
 
@@ -8,5 +11,4 @@ main:
   - title: "Contact"
     url: /contact/ 
     
-  - title: "Contact"
-    url: /contact/ 
+  
