--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
 
   - title: "Education"
-    url: /Education/ 
+    url: /education/ 
   
   - title: "Publications"
     url: /publications/
