--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,8 @@ main:
   - title: "Publications"
     url: /publications/
 
- 
+  - title: "Research"
+    url: /research/
   - title: "Contact"
     url: /contact/ 
     
