--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
 
   - title: "Research"
-    url: /research/
+    url: /_pages/research.html
     
   - title: "Contact"
     url: /contact/ 
