--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
 
   - title: "Research"
-    url: 520yrn.github.io//_pages/research.html
+    url: http:/520yrn.github.io//_pages/research.html
     
   - title: "Contact"
     url: /contact/ 
