--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url: /research/ 
 
   - title: "Experience"
-  - url: /Experience/
+    url: /Experience/
   
   - title: "Prize"
     url: /Prize/ 
