--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@ main:
 
   - title: "Experience"
     url: /Experience/
+
+  - title: "Experience"
+    url: /Experience/
   
   - title: "Prize"
     url: /Prize/ 
