--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,9 @@ main:
   - title: "Experience"
     url: /Experience/
   
+  - title: "Sitemap"
+    url: /Sitemap/
+    
   - title: "Prize"
     url: /Prize/ 
     
