--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : 
   email            : "ruining.yang@u.nus.edu"
-  researchgate     : 
+  researchgate     : "https://www.researchgate.net/profile/Yang-Ruining-2"
   bitbucket        :
   codepen          :
   dribbble         :
