--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  LinkedIn         : "ruining-yang-85883028a/"
+  LinkedIn         : "ruining-yang/"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
